--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<a href='indus.html'><button>Leer mas</button></a>
 			</div>
 			<div class='nota'>
-				<h4>Ing. Informatica</h4>
+				<h4>Ing. Informática</h4>
 				<a href='info.html'><button>Leer mas</button></a>
 			</div>
 			<div class='nota'>
