agregue el sa de cv

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	</div>
 	
 	<footer>
-		<h3>Derechos reservados Promotora Gaytan&#174</h3>
+		<h3>Derechos reservados Promotora Gaytan S.A de C.V&#174</h3>
 		Instituto Tecnólogico de Durango
 		Enero-Junio 2017
 		<br>Desarrollo de aplicaciones móviles
